# iDeclare

./: .gitignore  LICENCE.md  README.md  WORKSPACE.bazel
config/api/: BUILD.bazel  environments.json  resources.json
lib/python_third_party/: pip_imports.txt
script/: build.bat  run.bat  test_all.bat  test_all_brief.bat
script/tests/: gui.bat
src/main/app/: BUILD.bazel  cli.py  eori_checker.py  gui.py  main.py
src/main/app/controllers/: BUILD.bazel  cli.py  gui.py
src/main/file_system/: BUILD.bazel  api_environments.py  api_files.py  credentials.py  runfiles.py
src/main/gui/: BUILD.bazel  gui.py  interface.py
src/main/tss/: BUILD.bazel  api.py  connection.py  consignment.py  declaration.py  environments.py  url.py
src/main/tss/api/: BUILD.bazel  environments.py  model.py  url.py
src/main/tss/api/calls/: BUILD.bazel  consignment.py  declaration.py
src/main/tss/api/environment/: BUILD.bazel  environments.py  url.py
src/main/tss/declarations/: BUILD.bazel  consignment.py  declaration.py  declaration_header.py
src/test/gui/: BUILD.bazel  gui.py
src/test/tss/: BUILD.bazel  api.py  connection.py  consignment.py  declaration.py
