workspace(name = "CustomsAPI")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "00b25b02dc4593d620fccdd6c6069a202b87ac56f8446fab1a8101da557da2c2",
    strip_prefix = "rules_python-0.10.1",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.10.1.tar.gz",
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python3_9",
    python_version = "3.9.10",
)

load("@python3_9//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
   name = "python_third_party",
   requirements = "//lib/python_third_party:pip_imports.txt",
   python_interpreter_target = interpreter
)
