load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "cli",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/app/controllers",
    ],
)

py_binary(
    name = "gui",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/app/controllers",
    ],
)
