load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "file_system",
    srcs = glob(["*.py"]),
    data = [
        "//config/api:credentials.json",
        "//config/api:environments.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_python//python/runfiles",
    ],
)
