load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "file_system",
    srcs = glob(["*.py"]),
    data = [
        "//config/api:credentials.json",
        "//config/api:draft_declarations.json",
        "//config/api:environments.json",
        "//config/api:resource_url_links.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_python//python/runfiles",
    ],
)
