load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "calls",
    srcs = glob(["*.py"]),
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        requirement("requests"),
        "//src/main/tss/api/environment",
    ],
)
